# VoltAudit-AI

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  example_invoice.txt  example_invoice_dirty.txt  pyproject.toml
.agents/: AGENTS.md
.github/workflows/: ci.yml
.semgrep/: semgrep.yaml
agents/: README.md  pyproject.toml
agents/voltaudit_agents/: README.md  __init__.py  adk_platform.py  business_agents.md
antigravity-skills/: README.md  skills_logger.py
antigravity-skills/spk_001_document_ingestion/: SKILL.md  __init__.py
antigravity-skills/spk_002_vendor_resolution/: SKILL.md
antigravity-skills/spk_003_contract_intelligence/: SKILL.md
antigravity-skills/spk_004_tariff_validation/: SKILL.md
antigravity-skills/spk_005_physical_reconciler/: SKILL.md
antigravity-skills/spk_006_historical_anomaly/: SKILL.md
antigravity-skills/spk_007_risk_scorer/: SKILL.md
antigravity-skills/spk_008_audit_reporting/: SKILL.md
antigravity-skills/spk_009_governance/: SKILL.md
backend/: README.md  pyproject.toml
backend/voltaudit_backend/: __init__.py  config.py  main.py  router.py  schemas.py  services.py
demo/assets/: media_inventory.md
demo/production/: animation_notes.md  background_music.md  camera_movements.md  editing_notes.md  google_flow_prompt.md  production_checklist.md  subtitle_style.md  transitions.md
demo/release/: linkedin_post.md  project_launch_post.md  twitter_post.md  youtube_description.md  youtube_tags.md  youtube_title.md
demo/script/: captions.srt  interview_summary.md  narration.md  scene_timeline.md  storyboard.md  talking_points.md
deploy/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
docs/: coding_standards.md  contribution_guidelines.md  engineering_standards.md  global_context.md  onboarding.md  project_constitution.md
docs/architecture/: ai_workforce.md  capability_skill_mcp.md  data_flow_security_evaluation.md  design_freeze.md  enterprise_capability_model.md  mcp_architecture.md  skill_package_architecture.md  system_architecture.md  workforce_design.md
docs/deploy/: deployment_guide.md  release_notes_v1_0_0.md
docs/operations/: evaluation_observability_guide.md  production_readiness_report.md  runbook.md  security_guide.md
docs/release/: demo_package.md  evaluation_mapping.md  kaggle_writeup.md  media_package.md  portfolio_package.md  project_journey.md  release_validation_report.md
docs/screenshots/: index.md
frontend/: README.md  app.py  config.py  index.html  package.json  services.py  tsconfig.json
frontend/src/: App.tsx  index.css
mcp/: README.md  pyproject.toml
mcp/voltaudit_mcp/: README.md  __init__.py  database.py  server.py
scripts/: generate_audio.py  generate_demo_evidence.py
specs/: specifications.md
tasks/: TASK_TEMPLATE.md
tasks/tasks/: 001_initialize_project.md  002A_define_enterprise_architecture.md  (+19 more)
tests/: README.md  conftest.py
tests/unit/: test_adk.py  (+6 more)
(+18 files in other folders)
