[project]
name = "voltaudit-ai-root"
version = "0.1.0"
description = "Enterprise AI Workforce for Intelligent Invoice Auditing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35.0",
]


[dependency-groups]
dev = [
    "ruff>=0.4.10",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
    "types-pyyaml>=6.0.12.20240311",
    "types-requests>=2.32.0.20240602",
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "semgrep>=1.73.0",
    "pydantic>=2.7.4",
    "mcp>=0.1.0",
]


[tool.uv]
exclude-newer = "2026-07-01"
workspace = { members = ["backend", "agents", "mcp"] }


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # Ruff-specific rules
]
ignore = ["B008"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
mypy_path = "agents:mcp"
python_version = "3.12"

strict = true
explicit_package_bases = true
disallow_untyped_decorators = false
ignore_missing_imports = true

warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --tb=short"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
