[project]
name = "voltaudit-agents"
version = "0.1.0"
description = "VoltAudit AI Agent Orchestration and Tool Routing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.5.4",
    "mcp>=0.1.0",
    "pydantic>=2.7.4",
]

[dependency-groups]
dev = [
    "pytest>=8.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
