[project]
name = "voltaudit-backend"
version = "0.1.0"
description = "VoltAudit AI Backend API Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "sqlmodel>=0.0.19",
    "pydantic>=2.7.4",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
