[project]
name = "voltaudit-mcp"
version = "0.1.0"
description = "VoltAudit AI Model Context Protocol (MCP) Servers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.1.0",
    "pydantic>=2.7.4",
]

[dependency-groups]
dev = [
    "pytest>=8.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
